--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.3.4",
-    "dotenv": "^16.0.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "dotenv": "^16.4.7",
+    "express": "^4.18.2",
+    "mysql2": "^3.13.0",
+    "sequelize": "^6.37.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
