--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "techdepotrgv",
   "version": "1.0.0",
   "description": "TechDepotRGV Inventory Management System",
-  "main": "server.js",
+  "main": "server.mjs",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.mjs",
+    "dev": "nodemon server.mjs"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
