--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "techdepotrgv",
   "version": "1.0.0",
   "description": "TechDepotRGV Inventory Management System",
-  "main": "server.mjs",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.mjs",
-    "dev": "nodemon server.mjs"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
+    "helmet": "^8.1.0",
     "mysql2": "^3.13.0",
     "sequelize": "^6.37.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
-  },
-  "type": "commonjs"
+  }
 }
