--- a/package.json
+++ b/package.json
@@ -2,19 +2,20 @@
   "name": "techdepotrgv",
   "version": "1.0.0",
   "description": "TechDepotRGV Inventory Management System",
-  "main": "server.js",
+  "type": "module",
+  "main": "server.mjs",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.mjs",
+    "dev": "nodemon server.mjs"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "helmet": "^8.1.0",
+    "express": "^4.18.2",
     "mysql2": "^3.13.0",
-    "sequelize": "^6.37.6"
+    "sequelize": "^6.37.6",
+    "helmet": "^7.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
