--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "helmet": "^7.1.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.13.0",
-    "sequelize": "^6.37.6"
+    "sequelize": "^6.37.6",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
